# SFML-TileEditor

./: CMakeLists.txt  GameClass.h  H_Objects_.cpp  H_Objects_.h  LICENSE  README.md  TileMapLoader.h  Updates.md  WindowClass.h  XMLParse.h  main.cpp
Headers/: GameClass.h  H_Objects_.h  TileMapLoader.h  Wall.h  XMLParse.h  jsonParser.h
Headers/objects/: Wall.h  _Object.h
Resources/: propertytypes.json
Resources/objects/: _Object.h
newProjectXML/: image.tsx  untitled.tiled-project  untitled.tiled-session  untitled.tmx
source/: H_Objects_.cpp  Map_Example.tmx  main.cpp
